# 5G4Data-public

./: .gitignore  Dockerfile  README.md  go.mod
5G4Data-Tutorial/: 5G4Data.py  Caddyfile  Dockerfile  README.md  architecture-diagram.md  certificate-deploy-hook.sh  decide_and_act.py  docker-compose.yaml
AgentSyntheticTimeseriesGeneration/: .gitignore  SKILL.md  multi-agent-platform-architecture.pptx  multi-agent-tmf-intent-fulfillment-observation-simulation-platform.docx
AgenticDataSimulator/: Observation_Generating_Agent_Thoughts.md  README-MLFLOW.md  README-a2a-registry.md  README.md  TODO.md  agent-control  test-script.dsl
Intent-Simulator/: .dockerignore  .env.docker.example  .gitignore  API_USAGE_GUIDE.md  DOCKER.md  Dockerfile  README.md  app.py  example_api_client.py  requirements.txt  simple_api_example.py
Intent-and-IntentReport-Simulator/: .gitignore  README.md
IntentAgent/: README-a2a-registry.md  README.md  SKILL.md  Sustainability.md  chat_with_managed_agent.py  create_managed_agent_from_skill.py  create_openclaw_agents  create_openclaw_agents.sh
IntentAgent/StandalonePythonAgent/: .env.example  README.md  SHACL-VALIDATION.md  architecture.md  architecture.pptx  insert_avalanche_intent.sparql  pyproject.toml
IntentAgent/StandalonePythonAgent/src/: main.py
IntentAgent/StandalonePythonAgent/src/standalone_python_agent/: __init__.py  agent.py  api.py  cli.py  config.py  llm_transcript.py  models.py  prompting.py  shacl_validation.py
IntentAgent/StandalonePythonAgent/src/standalone_python_agent/tools/: __init__.py  catalogue.py  graphdb.py  ontology.py
IntentDashboard/: .gitignore  README.md  test.sparql
IntentReport-Simulator/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README-generate-observation-file.md  README.md  TODO.md  app.py  generate-intents.py  generate_observation_file.py  intent-generation.json  observation_generator.py  requirements.txt
IntentReportQueryProxy/: BANDWIDTH_TESTING.md  README.md  app.py  config.example.env  debug_step.py  docker-compose.yml  intent-metrics-timeseries-dashboard-infinity.json  run.py  run_tests.sh  simple_test.py  start.sh  test_app.py  test_bandwidth_metric.py  test_prometheus_direct.py  test_query_detection.py  test_step_fix.py
Lifecycle-Management/: .gitignore
Synthetic-Infrastructure-Data-Generation/: README.md
Workload-Catalog/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  go.mod  go.sum
backend/: app.py
generated-syntetic-data/: 5G4Data_Nordic_Edge_Datacenters.csv  Nordic_Bandwidth_Matrix.csv  Nordic_Bandwidth_Matrix.xlsx  Nordic_Distances_Matrix.csv  Nordic_Latencies_Matrix.csv  Nordic_Latency_Matrix.csv  Nordic_Latency_Matrix.xlsx  Nordic_Packet_Error_Rate_Matrix.csv  README.md  (+1 more)
inServ/: README.md  (+8 more)
intent-generation-mcp-server/: README.md  pyproject.toml  start.sh  test_intent_generation.py
intent-generation-mcp-server/src/: main.py
intent-generation-mcp-server/src/intent_generation_mcp/: __init__.py  server.py  tools.py
intent-generation-mcp-server/tests/: test_generation_client.py
intent-generator-package/: INSTALLATION.md  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py
intent-generator-package/intent_generator/: __init__.py  cli.py  core.py  models.py  utils.py
intent-generator-package/tests/: __init__.py  test_core.py
sparql-query-mcp-server/: .gitignore  README.md  config.env.example  pyproject.toml  start.sh  system_prompt.txt
sparql-query-mcp-server/src/: main.py
sparql-query-mcp-server/src/sparql_query_mcp/: __init__.py  server.py  tools.py
sparql-query-mcp-server/tests/: test_proper.py
(+1395 files in other folders)
